kubernetes/minio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
  labels:
    app: minio
spec:
  type: LoadBalancer
  ports:
  - name: api
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: console
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: minio
  sessionAffinity: None
