kubernetes/minio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio
  labels:
    app: minio
  annotations:
    # the name of the nginx-ingress-controller class
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - minio-console.mydomain.com
    secretName: minio-console.mydomain.com
  rules:
  - host: minio-console.mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9090
